3-sg.tf
# resource "aws_security_group" "public_web_server" {
#   name   = "public-web-server"
#   vpc_id = aws_vpc.vpc1.id

#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"] # HTTP from anywhere
#   }

#   ingress {
#     from_port   = -1
#     to_port     = -1
#     protocol    = "icmp"
#     cidr_blocks = ["0.0.0.0/0"] # Ping from anywhere
#   }

#   # Add egress rule to allow all outbound traffic
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"          # All protocols
#     cidr_blocks = ["0.0.0.0/0"] # Allow all outbound traffic
#   }

#   tags = {
#     Name = "tf-linux-public"
#   }
# }
